--- a/src/ralph/admin/static/elements/tool-tip.html
+++ b/src/ralph/admin/static/elements/tool-tip.html
@@ -1,6 +1,6 @@
 <dom-module id='tool-tip'>
   <template>
-    <i id='dupa' data-tooltip class="has-tip fa fa-info-circle" title="{{ title }}"></i>
+    <i data-tooltip class="has-tip fa fa-info-circle" title="{{ title }}"></i>
 
   </template>
   <script>
